# tusker-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: .env  Dockerfile  compose.yml  devcontainer.json
.devcontainer/apt/sources.list.d/: pgdg.sources
.github/workflows/: rust.yml
examples/query/: .env  Cargo.toml  db.sqlite
examples/query/db/fixtures/: post.sql
examples/query/db/queries/: get_post_by_id.json  get_post_by_id.sql  get_posts.sql
examples/query/db/schema/: post.sql
examples/query/src/: main.rs
src/: config.rs  db.rs  main.rs
src/cli/: mod.rs
src/cli/query/: mod.rs
src/cli/schema/: check.rs  diff.rs  mod.rs
src/commands/: check.rs  clean.rs  diff.rs  mod.rs
src/commands/config/: mod.rs
src/commands/query/: mod.rs
src/commands/schema/: mod.rs
tusker-migration/: Cargo.toml  README.md
tusker-migration/db/queries/: migration_delete.sql
tusker-migration/src/: cli.rs  db.rs  file.rs  init.sql  lib.rs  models.rs
tusker-query/: Cargo.toml
tusker-query-derive/: Cargo.toml
tusker-query-derive/src/: lib.rs
tusker-query-models/: Cargo.toml
tusker-query/src/: lib.rs  types.rs
tusker-schema/: Cargo.toml
tusker-schema/db/queries/: classes.sql  enums.sql  functions.sql  routines.sql  sequences.sql
tusker-schema/src/: diff.rs  lib.rs  queries.rs  schema.rs  sql.rs
tusker-schema/src/models/: column.rs  constraint.rs  enum.rs  function.rs  mod.rs  routine.rs  schema.rs  sequence.rs  table.rs  view.rs
tusker-schema/tests/: diff.rs
tusker-schema/tests/domain_alter/: down.sql  up.sql
tusker-schema/tests/enum_alter/: down.sql  up.sql
tusker-schema/tests/function_create/: up.sql
tusker-schema/tests/function_replace/: down.sql  up.sql
tusker-schema/tests/index_create/: down.sql  up.sql
tusker-schema/tests/procedure_create/: up.sql
tusker-schema/tests/procedure_replace/: down.sql  up.sql
tusker-schema/tests/sequence_alter/: down.sql
tusker-schema/tests/table_alter/: down.sql  up.sql
tusker-schema/tests/table_create/: down.sql  up.sql
tusker-schema/tests/trigger_create/: up.sql
