[package]
name = "tusker"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL specific schema migration tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.10", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
glob = "0.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1.34.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
toml = "0.8.8"
tusker-migration = { version = "0.1.0", path = "tusker-migration" }
tusker-query-models = { version = "0.1.0", path = "tusker-query-models" }
tusker-schema = { version = "0.1.0", path = "tusker-schema" }
users = { version = "0.11.0", default-features = false }

[workspace]
members = ["tusker-*", "examples/*"]
