[package]
name = "tusker-migration"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL specific database migration manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
sha2 = "0.10.8"
termcolor = "1.4.0"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["rt"] }

[dependencies.tokio-postgres]
crate = "tokio-postgres"
git = "https://github.com/sfackler/rust-postgres"
commit = "bbc04145de7a83dfa66cb3cf4a68878da2c1cc32"
features = ["with-time-0_3"]
