[package]
name = "tusker-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
deadpool-postgres = "0.11.0"
tokio-postgres = "0.7.10"
tusker-query-derive = { version = "0.1.0", path = "../tusker-query-derive" }
