[package]
name = "tusker-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
deadpool-postgres = "0.11.0"
tokio-postgres = { crate = "tokio-postgres", git = "https://github.com/bikeshedder/rust-postgres", branch = "table_oid_column_id" }
tusker-query-derive = { version = "0.1.0", path = "../tusker-query-derive" }
