[package]
name = "tusker-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
postgres-types = { version = "0.2.6", features = ["with-serde_json-1"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio-postgres = { version = "0.7.10" }
tusker-query = { version = "0.1.0", path = "../tusker-query" }
thiserror = "1.0.50"
